tests/baselines/reference/asyncGenerators.functionDeclaration.16.es5.errors.txt
tests/cases/conformance/asyncGenerators/es5/functionDeclarations/asyncGenerators.functionDeclaration.16.es5.ts(2,10): error TS1109: Expression expected.


==== tests/cases/conformance/asyncGenerators/es5/functionDeclarations/asyncGenerators.functionDeclaration.16.es5.ts (1 errors) ====
    async function * f() {
        await;
             ~
!!! error TS1109: Expression expected.
    }